--- a/css/main.css
+++ b/css/main.css
@@ -1524,3 +1524,388 @@ h6 {
     filter: alpha(opacity=100);
     opacity: 1;
 }
+
+div {
+    display: block;
+}
+
+body {
+    cursor: default;
+    -webkit-tap-highlight-color: transparent;
+    font-family: Spiegel, "Arial Narrow", Arial, sans-serif;
+}
+
+.dxCNx {
+    position: relative;
+}
+
+section {
+    display: block;
+}
+
+.esTCFa {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+.gFORcM {
+    position: relative;
+    width: 100%;
+    height: calc(66.25vw);
+    perspective: 100px;
+    perspective-origin: 50% 100%;
+    opacity: 0;
+    overflow: hidden;
+}
+
+element.style {
+    background-image: url(https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/…s/production/en-us/static/htp_hero_bg-de7b1ca….png);
+    transform: translate3d(3.04286px, 2.53546px, 0px);
+}
+
+.buOnXC {
+    position: absolute;
+    left: -10px;
+    bottom: 0px;
+    width: calc(100% + 20px);
+    height: calc(66.25vw + 20px);
+    background-size: cover;
+    will-change: transform;
+    background-repeat: no-repeat;
+    background-position: 50% 0%;
+}
+
+.buOnXC.particles {
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 66.25vw;
+    min-height: 80vh;
+}
+
+.gvEBRj {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    bottom: 1px;
+    left: 1px;
+    pointer-events: none;
+}
+
+.hMRjOy {
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.fIIeND {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.gzYhfD {
+    margin: 18vh 60px 0px;
+}
+
+.dJjBCP {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: rgb(1, 1, 1);
+}
+
+.jWvpDq {
+    font-weight: normal;
+    margin: 0px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-bottom: 0px;
+}
+
+h1 {
+    font-size: 2em;
+    margin: 0.67em 0px;
+}
+
+:-webkit-any(article,
+aside,
+nav,
+section) h1 {
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+}
+
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+html:not(:lang(el-gr)):not(:lang(ja-jp)):not(:lang(ko-kr)):not(:lang(th-th)):not(:lang(tr-tr)):not(:lang(zh-tw)) .fmCNnE {
+    text-transform: uppercase;
+}
+
+.fmCNnE:not(:lang(ko-kr)) {
+    font-style: italic;
+}
+
+.fmCNnE {
+    font-size: 1.25rem;
+}
+
+.fmCNnE {
+    display: block;
+    font-size: 1.5rem;
+    line-height: 1;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+}
+
+element.style {
+    animation-duration: 2800ms;
+    animation-delay: 600ms;
+    animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.jaWYak.show-nw {
+    clip-path: polygon(100% 100%, -200% 100%, 100% -200%);
+    animation-name: kDaqPz;
+}
+
+.jaWYak.inline {
+    display: inline-block;
+}
+
+.jaWYak {
+    clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
+    animation-fill-mode: backwards;
+    animation-duration: 1000ms;
+    animation-delay: 0ms;
+    animation-timing-function: ease-in-out;
+}
+
+.fmCNnE {
+    display: block;
+    font-size: 1.5rem;
+    line-height: 1;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+}
+
+.jaWYak.show-se {
+    clip-path: polygon(0% 0%, 200% 0%, 0% 200%);
+    animation-name: dpMRuZ;
+}
+
+.jaWYak.inline {
+    display: inline-block;
+}
+
+.jaWYak {
+    clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
+    animation-fill-mode: backwards;
+    animation-duration: 1000ms;
+    animation-delay: 0ms;
+    animation-timing-function: ease-in-out;
+}
+
+.iLTyui {
+    display: block;
+    font-size: 120px;
+    line-height: 0.85;
+    font-family: "Beaufort for LOL", serif;
+    font-weight: 800;
+    letter-spacing: 0.03em;
+}
+
+.iLTyui:not(:lang(ko-kr)) {
+    font-style: italic;
+}
+
+html:not(:lang(el-gr)):not(:lang(ja-jp)):not(:lang(ko-kr)):not(:lang(th-th)):not(:lang(tr-tr)):not(:lang(zh-tw)) .iLTyui {
+    text-transform: uppercase;
+}
+
+.czqSZD {
+    opacity: 0;
+    margin: 0px 60px 1.5rem;
+}
+
+.gPpUcv {
+    color: rgb(1, 1, 1);
+}
+
+.dxIUzM {
+    text-align: center;
+}
+
+.jaWYak.show-nw {
+    clip-path: polygon(100% 100%, -200% 100%, 100% -200%);
+    animation-name: kDaqPz;
+}
+
+.jaWYak.inline {
+    display: inline-block;
+}
+
+.jaWYak {
+    clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
+    animation-fill-mode: backwards;
+    animation-duration: 1000ms;
+    animation-delay: 0ms;
+    animation-timing-function: ease-in-out;
+}
+
+.kBbJZH {
+    max-width: 660px;
+    text-align: center;
+    font-size: 0.875rem;
+    letter-spacing: 0.08em;
+    line-height: 1.6;
+    margin: 20px auto 0px;
+}
+
+.kdgiFN {
+    text-align: center;
+}
+
+.haUEQQ {
+    position: relative;
+    display: inline-block;
+    min-width: 195px;
+    height: 56px;
+    color: rgb(1, 1, 1);
+    font-size: 0.8125rem;
+    letter-spacing: 0.15em;
+    font-weight: bold;
+    background-color: transparent;
+    padding: 0px;
+    margin: 5px;
+    border-width: 0px;
+    border-style: initial;
+    border-color: initial;
+    border-image: initial;
+}
+
+.jwjgSA {
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    min-width: 195px;
+    height: 56px;
+    padding: 0px 40px;
+}
+
+.jaWYak.show-nw {
+    clip-path: polygon(100% 100%, -200% 100%, 100% -200%);
+    animation-name: kDaqPz;
+}
+
+.jaWYak.absolute {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+.jaWYak {
+    clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
+    animation-fill-mode: backwards;
+    animation-duration: 1000ms;
+    animation-delay: 0ms;
+    animation-timing-function: ease-in-out;
+}
+
+.style__Anchor-sc-2c4lxx-0.variant-secondary .dEIUfJ {
+    background-color: rgb(208, 168, 92);
+}
+
+.style__Anchor-sc-2c4lxx-0.is-visible .dEIUfJ {
+    opacity: 1;
+}
+
+.dEIUfJ {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    min-width: 195px;
+    height: 56px;
+    opacity: 1;
+    transition: background-color 200ms ease 0s, opacity 0.01s ease 400ms;
+}
+
+.style__Anchor-sc-2c4lxx-0.is-visible .qFWxr {
+    animation: 0.6s cubic-bezier(0.77, 0, 0.175, 1) 850ms 1 normal forwards running bcCCNc;
+}
+
+.gvLtET {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    bottom: 1px;
+    left: 1px;
+    pointer-events: none;
+}
+
+.qFWxr {
+    position: relative;
+    z-index: 1;
+    opacity: 0;
+}
+
+.dsXNcy {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.haUEQQ {
+    position: relative;
+    display: inline-block;
+    min-width: 195px;
+    height: 56px;
+    color: rgb(1, 1, 1);
+    font-size: 0.8125rem;
+    letter-spacing: 0.15em;
+    font-weight: bold;
+    background-color: transparent;
+    padding: 0px;
+    margin: 5px;
+    border-width: 0px;
+    border-style: initial;
+    border-color: initial;
+    border-image: initial;
+}
+
+.style__Anchor-sc-2c4lxx-0.is-visible .dEIUfJ {
+    opacity: 1;
+}
